WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176767
REGRESSION (
r221272
): WKWebView gets stuck zoomed in if the web process crashes
https://bugs.webkit.org/show_bug.cgi?id=176767
Summary
REGRESSION (r221272): WKWebView gets stuck zoomed in if the web process crashes
Tim Horton
Reported
2017-09-11 22:58:19 PDT
REGRESSION (
r221272
): WKWebView gets stuck zoomed in if the web process crashes
Attachments
Patch
(4.26 KB, patch)
2017-09-11 22:58 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.08 KB, patch)
2017-09-11 23:09 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-09-11 22:58:39 PDT
Created
attachment 320521
[details]
Patch
mitz
Comment 2
2017-09-11 23:03:28 PDT
Comment on
attachment 320521
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=320521&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/AnimatedResize.mm:228 > + [webView loadHTMLString:@"<head><meta name='viewport' content='initial-scale=1' /></head>" baseURL:nil];
No need for the / and the preceding space in the meta tag.
> Tools/TestWebKitAPI/Tests/WebKitCocoa/AnimatedResize.mm:231 > + RetainPtr<UIWindow> window = adoptNS([[UIWindow alloc] initWithFrame:CGRectMake(0, 0, 800, 600)]);
auto?
> Tools/TestWebKitAPI/Tests/WebKitCocoa/AnimatedResize.mm:236 > + [webView loadHTMLString:@"<head><meta name='viewport' content='initial-scale=1' /></head>" baseURL:nil];
“ /”
Tim Horton
Comment 3
2017-09-11 23:07:31 PDT
Since literally all of those things were copied from the tests above, I fixed the whole file.
Tim Horton
Comment 4
2017-09-11 23:09:00 PDT
Created
attachment 320522
[details]
Patch
WebKit Commit Bot
Comment 5
2017-09-11 23:51:54 PDT
Comment on
attachment 320522
[details]
Patch Clearing flags on attachment: 320522 Committed
r221906
: <
http://trac.webkit.org/changeset/221906
>
WebKit Commit Bot
Comment 6
2017-09-11 23:51:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-09-27 12:36:03 PDT
<
rdar://problem/34693573
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug