REGRESSION (r221272): WKWebView gets stuck zoomed in if the web process crashes https://bugs.webkit.org/show_bug.cgi?id=176767 <rdar://problem/34196874>

Reviewed by Dan Bernstein.

Source/WebKit:

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _processDidExit]):
Reset the "last sent" layout parameters when the Web Content process exits.
They're no longer "last sent", and if we short-circuit from sending them
again (from under _didRelaunchProcess), we will never send the correct
layout width (until it changes).

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/AnimatedResize.mm:
(TEST):
Add a test ensuring that override layout size persists through Web
Content process crash.


Canonical link: https://commits.webkit.org/193247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221906 268f45cc-cd09-0410-ab3c-d52691b4dbfc